--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "samp-query-async",
+  "name": "async-samp-query",
   "version": "1.1.2",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "license": "MIT",
   "author": "kashadeveloper",
+  "keywords": [
+    "samp",
+    "sa-mp",
+    "fetch",
+    "sa mp"
+  ],
   "scripts": {
     "build": "tsc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kashadeveloper/samp-query-async.git"
   },
   "devDependencies": {
     "@types/node": "^16.3.0",
@@ -15,6 +25,10 @@
     "tsc": "^2.0.4",
     "typescript": "^4.9.4"
   },
+  "bugs": {
+    "url": "https://github.com/kashadeveloper/samp-query-async/issues"
+  },
+  "homepage": "https://github.com/kashadeveloper/samp-query-async",
   "dependencies": {
     "global": "^4.4.0",
     "iconv-lite": "^0.6.3"
